# GuardrailEnds

./: .gitignore  README.md  pyproject.toml  setup.sh
docs/: README.md  api-reference.md  architecture.md  guardrail-flow-diagram.html  integration-patterns.md  quickstart.md  testing-and-performance.md  troubleshooting.md
guardrail_tool/: __init__.py  cli.py  interface.py  nemo_config_store.py  nemo_input_guard.py  ollama_proxy.py  presidio_output_guard.py  settings_tui.py  tool.py
guardrail_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
guardrail_tool/nemo_config/: config.yml
tests/: test_guardrails_tool.py  test_nemo_input_guard.py  test_performance_guardrails.py  test_performance_real_optional.py  test_presidio_output_guard.py
