[project]
name = "guardrail-tool"
version = "0.1.0"
description = "Standalone guardrail library/tool (NeMo input + Presidio output)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PIIPOC" }]
dependencies = [
  "nemoguardrails>=0.10.0",
  "presidio-analyzer>=2.2.355",
  "presidio-anonymizer>=2.2.355",
  "spacy>=3.7.0",
]

[project.urls]
"Homepage" = "https://example.invalid"

[project.scripts]
guardrail-bench = "guardrail_tool.cli:main"
guardrail-ollama-proxy = "guardrail_tool.ollama_proxy:main"
guardrail-tui = "guardrail_tool.settings_tui:main"

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-benchmark>=5.1.0"]
tui = ["textual>=0.58.0"]
